--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "deploy": "docusaurus deploy"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.37",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.37",
+    "@docusaurus/core": "^2.0.0-alpha.39",
+    "@docusaurus/plugin-ideal-image": "^2.0.0-alpha.39",
+    "@docusaurus/preset-classic": "^2.0.0-alpha.39",
     "classnames": "^2.2.6",
+    "color": "^3.1.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4"
   }
