--- a/script/build
+++ b/script/build
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 source /opt/buildhome/python3.7/bin/activate
 python -m pip install pip
-python -m pip install requests
+python -m pip install requests pygithub
 python script/generate_default_repositories.py
 deactivate
 npm run build
