--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,7 @@
 		"${env:HOME}${env:USERPROFILE}/.ssh:/tmp/.ssh"
 	],
 	"appPort": ["3000:3000"],
-	"postCreateCommand": "yarn",
+	"postCreateCommand": "make init",
 	"extensions": [
 		"dbaeumer.vscode-eslint"
 	]
