--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@docusaurus/preset-classic": "^2.0.0-alpha.70",
     "@docusaurus/utils": "^2.0.0-alpha.70",
     "classnames": "^2.2.6",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "selfsigned": "^1.10.8",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "node-forge": "^0.10.0"
   },
   "browserslist": {
     "production": [
