--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "swizzle": "docusaurus swizzle"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.70",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.70",
-    "@docusaurus/utils": "^2.0.0-alpha.70",
+    "@docusaurus/core": "^2.0.0-beta.0",
+    "@docusaurus/preset-classic": "^2.0.0-beta.0",
+    "@docusaurus/utils": "^2.0.0-beta.0",
     "classnames": "^2.3.1",
     "node-forge": "^0.10.0",
     "react": "^17.0.2",
