--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "start": "docusaurus start --host 0.0.0.0",
     "build": "docusaurus build",
+    "serve": "docusaurus serve",
     "swizzle": "docusaurus swizzle"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-beta.9",
     "@docusaurus/preset-classic": "^2.0.0-beta.9",
     "@docusaurus/utils": "^2.0.0-beta.9",
+    "@easyops-cn/docusaurus-search-local": "^0.20.0",
     "classnames": "^2.3.1",
     "node-forge": "^0.10.0",
     "react": "^17.0.2",
