--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-async": "^10.0.1",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.22",
     "selfsigned": "^1.10.11"
   },
   "browserslist": {
