dev: Fixing devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "HACS Documentation",
-	"image": "mcr.microsoft.com/vscode/devcontainers/javascript-node:0-14",
+	"image": "mcr.microsoft.com/vscode/devcontainers/javascript-node:16",
 	"context": "..",
 	"postStartCommand": "make init",
 	"settings": { 
