--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,7 @@ updates:
   schedule:
     interval: weekly
   open-pull-requests-limit: 10
+groups:
+  docusaurus:
+    patterns:
+    - "@docusaurus/*"
