--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v4.1.6
 
       - name: Setup
-        runs: scripts/setup
+        run: scripts/setup
 
       - name: Build
-        runs: scripts/build
+        run: scripts/build
