--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ site_url: https://hacs.xyz
 repo_url: https://github.com/hacs/integration
 repo_name: hacs/integration
 docs_dir: source
+site_dir: build
 use_directory_urls: true
 strict: true
 validation:
