Set python version to 3.8

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,6 +28,13 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v4.1.6
 
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: ".python-version"
+          cache: "pip"
+          cache-dependency-path: "requirements.txt"
+
       - name: Setup
         run: scripts/setup
 
