Download HACS: add intro para (#509)
* download HACS: add intro para

* Fix nav title to make it clear that it is about downloading HACS, not repo

* Tweaks

* Undo formatting changes

* Update source/docs/use/download/download.md

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

* Update source/docs/use/download/download.md

---------

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Co-authored-by: Joakim Sørensen <joasoe@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,7 +159,7 @@ nav:
   - Home: index.md
   - Use:
     - docs/use/index.md
-    - Download:
+    - Download HACS:
       - docs/use/download/prerequisites.md
       - docs/use/download/download.md
       - docs/use/download/remove.md
