--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,7 +50,7 @@ theme:
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: indigo
+      primary: custom
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
