--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -174,6 +174,7 @@ nav:
     - Troubleshooting:
       - docs/use/troubleshooting/diagnostics.md
       - docs/use/troubleshooting/logs.md
+      - docs/use/troubleshooting/hacs_update_broke_my_hacs.md
     - docs/use/remove.md
   - Publish:
     - docs/publish/index.md
