--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,68 +148,68 @@ not_in_nav: |
 nav:
   - Home: index.md
   - Use:
-    - docs/use/index.md
-    - Download HACS:
-      - docs/use/download/prerequisites.md
-      - docs/use/download/download.md
-    - Configure HACS:
-      - docs/use/configuration/basic.md
-      - docs/use/configuration/options.md
-    - Repositories:
-      - docs/use/repositories/dashboard.md
-      - Repository types:
-        - docs/use/repositories/type/index.md
-        - docs/use/repositories/type/appdaemon.md
-        - docs/use/repositories/type/dashboard.md
-        - docs/use/repositories/type/integration.md
-        - docs/use/repositories/type/python_script.md
-        - docs/use/repositories/type/template.md
-        - docs/use/repositories/type/theme.md
-    - Entities:
-      - docs/use/entities/update.md
-      - docs/use/entities/switch.md
-    - docs/use/data.md
-    - docs/use/my.md
-    - Troubleshooting:
-      - docs/use/troubleshooting/diagnostics.md
-      - docs/use/troubleshooting/logs.md
-      - docs/use/troubleshooting/hacs_update_broke_my_hacs.md
-      - docs/use/troubleshooting/ha_update_broke_my_hacs.md
-    - docs/use/remove.md
+      - docs/use/index.md
+      - Download HACS:
+          - docs/use/download/prerequisites.md
+          - docs/use/download/download.md
+      - Configure HACS:
+          - docs/use/configuration/basic.md
+          - docs/use/configuration/options.md
+      - Repositories:
+          - docs/use/repositories/dashboard.md
+          - Repository types:
+              - docs/use/repositories/type/index.md
+              - docs/use/repositories/type/appdaemon.md
+              - docs/use/repositories/type/dashboard.md
+              - docs/use/repositories/type/integration.md
+              - docs/use/repositories/type/python_script.md
+              - docs/use/repositories/type/template.md
+              - docs/use/repositories/type/theme.md
+      - Entities:
+          - docs/use/entities/update.md
+          - docs/use/entities/switch.md
+      - docs/use/data.md
+      - docs/use/my.md
+      - Troubleshooting:
+          - docs/use/troubleshooting/diagnostics.md
+          - docs/use/troubleshooting/logs.md
+          - docs/use/troubleshooting/hacs_update_broke_my_hacs.md
+          - docs/use/troubleshooting/ha_update_broke_my_hacs.md
+      - docs/use/update.md
+      - docs/use/remove.md
   - Publish:
-    - docs/publish/index.md
-    - docs/publish/start.md
-    - docs/publish/include.md
-    - docs/publish/action.md
-    - docs/publish/appdaemon.md
-    - docs/publish/integration.md
-    - docs/publish/plugin.md
-    - docs/publish/python_script.md
-    - docs/publish/template.md
-    - docs/publish/theme.md
-    - docs/publish/remove.md
+      - docs/publish/index.md
+      - docs/publish/start.md
+      - docs/publish/include.md
+      - docs/publish/action.md
+      - docs/publish/appdaemon.md
+      - docs/publish/integration.md
+      - docs/publish/plugin.md
+      - docs/publish/python_script.md
+      - docs/publish/template.md
+      - docs/publish/theme.md
+      - docs/publish/remove.md
   - Contribute:
-    - docs/contribute/index.md
-    - docs/contribute/backend.md
-    - docs/contribute/devcontainer.md
-    - docs/contribute/documentation.md
-    - docs/contribute/frontend.md
-    - docs/contribute/translation.md
-    - docs/contribute/maintainer.md
+      - docs/contribute/index.md
+      - docs/contribute/backend.md
+      - docs/contribute/devcontainer.md
+      - docs/contribute/documentation.md
+      - docs/contribute/frontend.md
+      - docs/contribute/translation.md
+      - docs/contribute/maintainer.md
   - FAQ:
-    - docs/faq/index.md
-    - docs/faq/addons.md
-    - docs/faq/custom_repositories.md
-    - docs/faq/data_sources.md
-    - docs/faq/existing_elements.md
-    - docs/faq/github_account.md
-    - docs/faq/ha_update.md
-    - docs/faq/hassio_only.md
-    - docs/faq/highlights.md
-    - docs/faq/other_git_providers.md
-    - docs/faq/private_repositories.md
-    - docs/faq/download.md
-  - Help: 
-    - docs/help/index.md
-    - docs/help/issues.md
-
+      - docs/faq/index.md
+      - docs/faq/addons.md
+      - docs/faq/custom_repositories.md
+      - docs/faq/data_sources.md
+      - docs/faq/existing_elements.md
+      - docs/faq/github_account.md
+      - docs/faq/ha_update.md
+      - docs/faq/hassio_only.md
+      - docs/faq/highlights.md
+      - docs/faq/other_git_providers.md
+      - docs/faq/private_repositories.md
+      - docs/faq/download.md
+  - Help:
+      - docs/help/index.md
+      - docs/help/issues.md
