Remove mailto from footer resources

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,7 +82,7 @@ extra:
     - link: https://github.com/hacs/.github/blob/master/CODE_OF_CONDUCT.md
       title: Code of Conduct
       icon: fontawesome/solid/scale-balanced
-    - link: mailto:hi@hacs.xyz
+    - link: hi@hacs.xyz
       title: Contact (no support!)
       icon: fontawesome/solid/at
     - link: https://squidfunk.github.io/mkdocs-material/
